IE6 hack added for header body styles shifted to new body ID to avoid iframe page body tag inheriting the pink  background

--- a/ie.css
+++ b/ie.css
@@ -17,3 +17,8 @@ td.menu-disabled { filter: alpha(opacity=50); }
 .with-logo #superfish-inner { margin: 0; }
 #primary ul.links li a,
 #superfish { position: relative; z-index: 2;}
+#primary,
+#superfish {
+  _width: 100%;
+  _margin: 0 -100% 0 0;
+}
