--- a/layout.css
+++ b/layout.css
@@ -5,8 +5,8 @@
  * column layout depending on whether blocks are enabled in the left or right
  * columns.
  *
- * This layout is based on the Holy Grail layout used in the Zen Theme.
- * http://drupal.org/project/zen
+ * The Pixture Reloaded layout is based on the Holy Grail layout used in the 
+ * Zen Theme. http://drupal.org/project/zen
  *
  */
 /*-------------------------------------------------------------------*/
@@ -191,7 +191,7 @@ div#search { margin: 0 10px 0 0; }
 /*                          Footer & Closure                         */
 /*-------------------------------------------------------------------*/
 #footer { min-height: 70px; }
-#footer-message { padding: 10px; }
+#footer-message { padding: 0 0 3px 0; }
 #closure-blocks {}
 /*-------------------------------------------------------------------*/
 /*                   Prevent overflowing content                     */
