--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ html {
   font-size: 100%; /*Fix a IE em BUG*/
 }
 body {
+  background-color: #FFF;
+}
+#pixture-reloaded {
   font-family: "Helvetica neue", Helvetica, Arial, Verdana, sans-serif;
   font-size: 12px;
   color: #444;
@@ -54,10 +57,19 @@ em {
   font-weight: normal;
   color: #666;
 }
+blockquote {
+  margin: 4px 10px;
+  padding: 10px 15px;
+  background: F9CBED;	/* same as block content background color */
+}
 #mission, 
 .node .content, 
 .comment .content {
   line-height: 1.5em;
+}
+.breadcrumb {
+  padding: 0;
+  padding-bottom: 2px;
 }
 /*-------------------------------------------------------------------*/
 /*                             Lists                                 */
@@ -181,8 +193,8 @@ div#header {
   padding: 8px 12px 9px;
 }
 #primary ul.links li a:hover {
-  background: url(images/sf-hover-tile.png) repeat-y left top;
-  text-decoration: none;
+  background: #000;
+  text-decoration: underline;
 }
 /* Superfish Default skin */
 #superfish-inner .menu {
@@ -226,20 +238,6 @@ div#search {
 }
 div#search label {
   display: none;
-}
-/*-------------------------------------------------------------------*/
-/*                             Messages                             */
-/*-------------------------------------------------------------------*/
-#help {
-  font-size: 0.9em;
-  margin-bottom: 1em;
-}
-.breadcrumb {
-  padding: 0;
-  padding-bottom: 2px;
-}
-.error {
-  border-color: red;
 }
 /*-------------------------------------------------------------------*/
 /*                             Footer                                */
@@ -313,7 +311,7 @@ div#search label {
   padding: 0 3px;
   font-size: 12px;
 }
-.block .title {
+.block h2.title {
   font-size: 1em;
   height: 22px;
 }
@@ -353,7 +351,7 @@ div#search label {
   color: #AC2E82;
 }
 .node .picture {
-  border: 1px solid #DDD;
+  border: none;
   float: right;
   margin: 0.5em;
 }
@@ -470,8 +468,9 @@ div#search label {
   color: red;
 }
 .comment .picture {
+  border: none;
   float: left;
-  margin: 0.5em;
+  margin: 15px 0 0 20px;
 }
 .comment .comment-id {
   font-size: 16px;
@@ -514,7 +513,7 @@ div#search label {
 .comment h3.title     { margin: 0 20px 5px; padding: 10px 0 3px 0; }
 .comment .submitted   { margin: 0 20px; padding: 0; }
 .comment .content     { margin: 10px 20px; padding: 0; }
-.comment .content.with-picture { margin-left: 90px; }
+.comment .content.with-picture { margin-left: 115px; }
 .comment div.links       { margin: 0; padding: 0 0 10px; }
 .comment div.links ul li { margin: 0 20px 10px 20px; padding: 0; }
 /*-------------------------------------------------------------------*/
@@ -808,11 +807,6 @@ pre {
   border: solid 1px #BBB;
   color: #222;
 }
-blockquote {
-  margin: 4px 10px;
-  padding: 10px 15px;
-  background: F9CBED;	/* same as block content background color */
-}
 /*-------------------------------------------------------------------*/
 /*                              Messages                             */
 /*-------------------------------------------------------------------*/
@@ -820,6 +814,10 @@ div.messages {
   font-weight: bold;
   margin-bottom: 1.5em;
   padding: 0.68em;
+}
+#help {
+  font-size: 0.9em;
+  margin-bottom: 1em;
 }
 .status {
   color: #264409;
